Fixed flag being cut off at bottom

--- a/neo.css
+++ b/neo.css
@@ -19,7 +19,7 @@ main {
     flex: 1;
     align-items: center;
     overflow: hidden;
-    height: 100vh;
+    height: 100.01vh;
     flex-basis: auto;
     display: grid;
     grid-template: repeat(3, 1fr) / auto;
@@ -56,13 +56,11 @@ main > :last-child {
     border-bottom: none;
 }
 
-main > div > img {
-    margin-top: 0;
-    max-width: 655px;
-    height: auto;
+#display img {
+    display: block;
+    max-height: 100%;
     background: black;
     width: 100%;
-    max-height: 100%;
     margin: 0 auto;
 }
 
@@ -76,6 +74,11 @@ form {
     align-items: center;
     width: 100%;
     gap: 5px;
+}
+
+#display {
+    display: grid;
+    grid-template: auto 1fr / auto;
 }
 
 #active form {
@@ -139,6 +142,7 @@ h1 {
     margin: 8px 0px;
     flex-grow: 0;
     font-size: 16pt;
+    text-align: center;
 }
 
 h2 {
